# bmstu_computer-network

lab_1/: part_1.pkt  part_2.pkt  part_3.pkt
lab_2/: Makefile  client  client.c  converter.c  converter.h  server  server.c  types.h
lab_3/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cli  cmake_install.cmake  lab_3.cbp  stats
lab_3/client/: client.cpp
lab_3/server/: engine.cpp  main.cpp  poll_async.cpp  poll_async.h  server.cpp  server.h
lab_3/socket/: Socket.cpp  Socket.h
lab_4/: lab4.pkt  lab4_v1.pkt
lab_5/: lab_5.py  main.py  text.txt
lab_6/: dev_v.pkt
lab_6/report/: 01-title.tex  11-task.tex
lab_7/: AlexanderKuprylab7.pkt  lab7_done.pkt
lab_8/: lab8_part_1.pkt
lab_8/report/: 00-preamble.tex  01-title.tex  11-task.tex  report.tex
lab_9/: lab9.pkt
lab_9/report/: 01-title.tex  11-task.tex
